@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.eclipse.rdf4j</groupId>
 		<artifactId>rdf4j-compliance</artifactId>
-		<version>4.1.1-SNAPSHOT</version>
+		<version>1.0M1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>rdf4j-store-compliance</artifactId>
@@ -38,13 +38,13 @@
 			<artifactId>rdf4j-repository-http</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>rdf4j-repository-sail</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>rdf4j-repository-sparql</artifactId>
@@ -166,33 +166,27 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<configuration>
-					<forkCount>1</forkCount>
-					<reuseForks>false</reuseForks>
-					<argLine>-Xmx1024M -XX:MaxPermSize=256M</argLine>
-                                        <includes>
-                                                <include>**/*Test.java</include>
-                                        </includes>
 					<excludes>
 						<exclude>**/DataStorePerfTest.java</exclude>
 						<exclude>**/TestServer.java</exclude>
 					</excludes>
 				</configuration>
-                                <executions>
-                                        <execution>
-                                                <id>integration-tests</id>
-                                                <phase>integration-test</phase>
-                                                <goals>
-                                                        <goal>integration-test</goal>
-                                                </goals>
-                                        </execution>
-                                        <execution>
-                                                <id>verify</id>
-                                                <phase>verify</phase>
-                                                <goals>
-                                                        <goal>verify</goal>
-                                                </goals>
-                                        </execution>
-                                </executions>
+				<executions>
+					<execution>
+						<id>integration-tests</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>verify</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
